force-app/main/default/objects/junction_object__c/junction_object__c.object-meta.xml
<CustomObject>
    <label>junction object</label>
    <nameField>
        <label>junction object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>junction objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>