force-app/main/default/objects/junction_object__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>junction objects</relationshipLabel>
    <relationshipName>junction_objects</relationshipName>
    <type>Lookup</type>
</CustomField>