force-app/main/default/objects/junction_object__c/fields/POR__c.field-meta.xml
<CustomField>
    <fullName>POR__c</fullName>
    <label>POR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Owner</fullName>
            </value>
            <value>
                <fullName>Global Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>